src/main/kotlin/com/example/yuseong_allowancepayments_be/global/error/response/ErrorResponse.kt
package com.example.yuseong_allowancepayments_be.global.error.response

interface ErrorResponse {

    val status: Int
    val message: String

}